wacc/test/golden/syntaxErr.basic.badComment2
# program has missing in-line comment declaration

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin
  int x = 10 ; can I put in-line comments after the ';'?
  x = 20 ; #yes, but only if you remember to use the '#' charcter!
  exit x
end


In test/wacc_examples/invalid/syntaxErr/basic/badComment2.wacc (line 12, column 20):
unexpected "I"
expected array index or assignment
> begin
>   int x = 10 ; can I put in-line comments after the ';'?
>                    ^
>   x = 20 ; #yes, but only if you remember to use the '#' charcter!
